--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ nav {
     font-size: 25px;
 }
 
+#actualite {
+    height: 500px;
+    border-radius: 30px;
+    margin-bottom: 15px;
+    
+}
+
 .navbar-brand {
     height: 150px;
     width: 150px;
