--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --main-color-black: #100E0E;
     --main-color-purple: #5A3E51;
     --main-color-purpleLight: #D9DAFF;
-    --main-color-background: rgb(217,217,255);
+    --main-color-background: #D9DAFF;
     --main-color-title : #000000;
     
 }
