--- a/profil.css
+++ b/profil.css
@@ -46,9 +46,11 @@ ul li i {
     margin-right: 10px;
 }
 
-ul li:hover {
-    background-color: grey;
-    
+ul li span:hover {
+    background-color: #5A3E51;
+    padding: 10px;
+    border-radius: 25px;
+    transition: 400ms;
 }
 
 .page {
@@ -73,7 +75,7 @@ ul li:hover {
 
 
 .sidebar {
-    background-color: black;
+    background-color: #100E0E;
     width: auto;
 }
 
@@ -87,10 +89,15 @@ ul li:hover {
     margin-top: 96px ;
 }
 .bloc2 {
-    margin-top: 96px ;
-   
+    margin-top: 115px ;
 }
 
+.bloc2 .btn {
+    background-color: #100E0E;
+    color: #D9DAFF;
+    border-radius: 25px;
+    padding: 10px;
+}
 .consignePassword {
     padding: 5px;
     color: #D9DAFF;
@@ -105,46 +112,230 @@ ul li:hover {
         flex-direction: column !important;
         width: auto;
     }
-    .bloc1 {
-        width: auto;
+    input {
+        width : 400px !important;
     }
-    .bloc2{
-        width: auto;
+    .bloc1, .bloc2 {
+        width: 500px;
     }
+
 
 }
 @media screen and (max-width: 900px) {
     .menuList {
         font-size: 17px;
-     }
+    }
+    input {
+        width : 300px !important;
+    }
+    .bloc1, .bloc2 {
+        width: 400px;
+    }
 }
 @media screen and (max-width: 767px) {
- ul li span {
-    font-size: 12px;
- }
- ul li {
-    font-size: 12px;
- }
- .menuList {
-    font-size: 15px;
- }
-
+    ul li span {
+        font-size: 12px;
+    }
+    ul li {
+        font-size: 12px;
+    }
+    .menuList {
+        font-size: 15px;
+    }
 }
-
 
 @media screen and (max-width: 700px) {
     ul li span {
         font-size: 10px;
-     }
+    }
+}
 
+@media screen and (max-width: 575px) {
+    input {
+        width : 200px !important;
+    }
+    .bloc1, .bloc2 {
+        width: 280px;
+    }
+    .consignePassword {
+        width: 200px;
+    }
+    .sidebar i {
+        font-size: 20px;
+        margin-top: 65px;
+    }
+}
+
+@media screen and (max-width: 445px) {
+    input {
+        width : 130px !important;
+    }
+    .bloc1, .bloc2 {
+        width: 230px;
+        text-align: center;
+    }
+    .consignePassword {
+        width: 130px;
+    }
+}
+
+/*NAV BAR */
+nav {
+    background-color: black;
+    height: 80px;
+}
+
+.nav-link:hover {
+    color: var(--main-color-black) !important;
+    background-color: var(--main-color-purple);
+    border-radius: 20px !important;
+    transition: 600ms;
+    
 }
 
 
-
-@media screen and (max-width: 680px) {
-
-
+.navbar .nav-link {
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: 30px;
+    position: relative;
+    color: var(--main-color-purpleLight);
+    border-radius: 20px !important;
 }
-@media screen and (max-width: 500px) {
 
+.navbar .navbar-brand img{
+    max-height: 70px;
+    
+}
+
+/*
+.navbar .nav-link::before {
+
+    content: '';
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    width: 0px;
+    height: 2px;
+    color: #5A3E51 !important;
+    background-color: var(--main-color-purple);
+    box-shadow: 0px 0px 8px var(--main-color-purple);
+    transition: all .6s ease;
+    transform-origin: center;
+}*/
+/*
+.navbar .nav-item:hover .nav-link::before {
+    width: 100%;
+}*/
+
+.navbar .navbar-toggler {
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.navbar .toggle-btn {
+    cursor: pointer;
+    position: relative;
+    top: 5px;
+    z-index: 1100;
+}
+
+.navbar .toggle-btn .bar {
+    width: 25px;
+    height: 3px;
+    margin: 7px 0 7px auto;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    background-color: var(--main-color-purpleLight);
+}
+
+.navbar .toggle-btn .bar:nth-child(2) {
+    width: 35px;
+}
+
+.navbar #toggle-menu {
+    display: none;
+}
+
+.navbar #toggle-menu:checked+label.toggle-btn .bar:nth-child(2) {
+    -webkit-transform: translateX(50px);
+    -ms-transform: translateX(50px);
+    transform: translateX(50px);
+    opacity: 0;
+}
+
+.navbar #toggle-menu:checked+label.toggle-btn .bar:nth-child(1) {
+
+    -webkit-transform: translateY(12px) rotate(45deg);
+    -ms-transform: translateY(12px) rotate(45deg);
+    transform: translateY(12px) rotate(45deg);
+}
+
+.navbar #toggle-menu:checked+label.toggle-btn .bar:nth-child(3) {
+
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+    -ms-transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+.modal-dialog {
+    margin-left: -3px;
+    margin-top: -3px;
+    width: 85%;
+}
+
+.modal-dialog .modal-content{
+    background-color: var(--main-color-purple);
+    
+}
+
+.modal-dialog .modal-header, .modal-dialog .modal-footer{
+    border: none;
+}
+
+.modal-dialog .modal-header img{
+    max-height: 40px;
+}
+
+.modal-dialog .modal-body {
+    padding-top: 65px;
+    background-color: var(--main-color-black);
+}
+
+.modal-dialog .nav-link {
+    font-weight: 500;
+    font-size: 18px;
+    margin-bottom: 30px;
+    color: var(--main-color-purpleLight);
+    border-radius: 20px !important;
+}
+
+.modal-dialog .nav-link i {
+    font-size: 30px;
+    margin-right: 10px;
+    color: var(--main-color-purpleLight);
+}
+
+.dropdown-menu{
+    font-weight: 700 !important;
+    background-color: var(--main-color-purpleLight) !important;
+}
+
+.dropdown-item{
+    color: var(--main-color-black) !important;
+}
+
+.modal-dialog .btn-secondary{
+    font-weight: 700;
+    color: var(--main-color-purple);
+    background-color: var(--main-color-black);
+    border: none;
+}
+
+.fa-moon {
+    font-size: 20px;
+    color: var(--main-color-purpleLight);
 }
