--- a/galerie.css
+++ b/galerie.css
@@ -56,10 +56,6 @@ figure {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin-left: 200px;
-   
-   
-
 }
 /* #zone2 img {
     object-fit: cover;
@@ -84,14 +80,12 @@ figure {
     position: relative;
     /* top: 50%;
     left: 50%; */
-    transform: translate(-50%, -50%);
     width: 200px;
     height: 300px;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-    margin: 30px;
-    margin-top: 200px;
+    margin: 15px;
 
   }
   
@@ -133,8 +127,9 @@ figure {
   }
   
   .box .details h3 {
-    margin-top: 1px;
-    margin-bottom: 0px;
+    font-size: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     text-align: center;
     text-transform: uppercase;
   }
@@ -191,8 +186,9 @@ figure {
   }
   
   .box:hover .ajoutPanier a {
-    transform: translateY(20px);
+    transform: translateY(140px);
     opacity: 1;
+    height: 300px;
   }
 
 
